# data-profiler

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API.md  CHANGELOG.md  CODING_STANDARDS.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVOPS_CHECKLIST.md  DEVOPS_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile.api  Dockerfile.web  ERROR_CODES.md  FINAL_TEST_VERIFICATION_REPORT.md  FRONTEND_INTEGRATION_STATUS.md  GITHUB_ISSUES.md  GITHUB_ISSUES_SUMMARY.md  IMPLEMENTATION_STATUS.md  ISSUE_CREATION_GUIDE.md  Makefile  ORIGINAL_9_TESTS_STATUS.md  PYTHON_BACKEND_SUMMARY.md  QA_FINAL_REPORT.md  QA_SIGN_OFF.md  README.md  REMAINING_TEST_FAILURES.md  SECURITY_AUDIT_RESULTS.md  TESTING_QUICK_REF.md  TEST_ENGINEER_STATUS.md  TEST_FIXES_SUMMARY.md  TEST_SUITE_SUMMARY.md  TYPE_INFERENCE.md  UPLOAD_AREA_REDESIGN.md  UX_DESIGN_RECOMMENDATIONS.md  VERIFIED_9_TESTS_ALL_PASSING.md  WEB_UI_SUMMARY.md  (+6 more)
.github/: README.md
.github/workflows/: ci.yml
api/: DOCSTRING_TEMPLATES.py  TEST_ENGINEER_SUMMARY.md  TEST_RESULTS_ANALYSIS.md  TEST_VERIFICATION_GUIDE.md  VERIFICATION_INDEX.md  VERIFICATION_READY.md  analyze_test_failures.py  app.py  check_test_status.sh  coverage.json  monitor_test_progress.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  verify_tests.py
api/models/: run.py
api/routers/: runs.py
api/services/: audit.py  distincts.py  errors.py  ingest.py  keys.py  pipeline.py  profile.py  report.py  types.py
api/storage/: workspace.py
api/tests/: README.md  conftest.py  test_audit.py  test_candidate_keys.py  test_csv_parser.py  test_date.py  test_distincts.py  test_line_endings.py  test_money.py  test_type_inference.py
api/tests/integration/: __init__.py  test_errors.py  test_full_pipeline.py  test_pipeline.py
api/tests/performance/: README.md  generate_large_file.py  run_large_file_test.py  test_large_files.py  validate_large_file_generation.py
api/tests/unit/: test_api.py  test_code_profiler.py  test_crlf.py  test_distincts_new.py  test_errors.py  test_money_profiler.py  test_parser.py  test_profiling_integration.py  test_utf8.py
docs/: API.md  ARCHITECTURE.md  CICD_ARCHITECTURE.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_QUICK_START.md  DEVELOPER_GUIDE.md  ERROR_CODES.md  GITHUB_RUNNER_SETUP.md  OPERATIONS.md  QA_REPORT.md  QUICKSTART.md  README.md  RUNNER_COMPARISON.md  TEST_STRATEGY.md  USER_GUIDE.md
scripts/: cleanup-old-runs.sh  init-data.sh
tests/: TDD_DELIVERABLES.md  TEST_PLAN.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  run_tests.sh  test_api_endpoints.py  test_artifact_generation.py  test_candidate_keys.py  test_crlf_detector.py  test_csv_parser.py  test_date_validator.py  test_delimiter_auto_detection_integration.py  test_delimiter_detector.py  test_distinct_counter.py  test_duplicate_detector.py  test_error_aggregator.py  test_money_validator.py  test_numeric_sanitization.py  test_numeric_validator.py  test_quoting_detector.py  test_type_inference.py  test_user_friendly_errors.py  test_utf8_validator.py
tests/e2e/: test_full_workflow.py  test_user_workflows.py
tests/fixtures/: README.md  compound_key.csv  dates_mixed.csv  duplicate_records.csv  mixed_types.csv  money_violations.csv  quoted_fields.csv
web/: QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  index.css
web/src/components/: CandidateKeys.tsx  ColumnCard.tsx  ColumnTable.tsx  Downloads.tsx  (+6 more)
(+5 files in other folders)
